tests/NormalTests/paczka1/small_fuzzy/70949756.err
Error in line 4: hCAjk5sDf S186 47,0
Error in line 11: hCAjk5sDf A480 71,7
Error in line 8: S110 A480 15,4
